--- a/assets/scss/components/_hero-image.scss
+++ b/assets/scss/components/_hero-image.scss
@@ -18,7 +18,7 @@
   }
   .hero-text {
     flex: 0;
-    color: #ffffff;
+    color: #2f4680;
     margin: auto 0;
     h1 {
       font-size: 3rem;
